--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
   <div class="story-output">
     <button id="surprise-btn">Surprise Me!</button>
     <p id="story-text">Your story will appear here...</p>
+    <button id="reset-btn">Reset Story</button>
   </div>
 
 </body>
