complete overhaul to match video/img

--- a/index.html
+++ b/index.html
@@ -12,37 +12,66 @@
 </head>
 <body>
   <h1>See N Say Storymaker</h1>
-  
-  <!-- Main word selector section -->
+
   <div class="storymaker-container">
-    <!-- Subject Column -->
-    <div class="word-column" id="subject-col">
-      <h2>Subject</h2>
-      <div class="buttons" id="subject-buttons"></div>
+    <!-- Column 1: Subject -->
+    <div class="word-column">
+      <button id="button1">Subject</button>
+      <ul class="verb-list">
+        <li class="verb">The cat</li>
+        <li class="verb">My brother</li>
+        <li class="verb">A robot</li>
+        <li class="verb">The dog</li>
+        <li class="verb">Our teacher</li>
+      </ul>
     </div>
 
-    <!-- Verb Column -->
-    <div class="word-column" id="verb-col">
-      <h2>Verb</h2>
-      <div class="buttons" id="verb-buttons"></div>
+    <!-- Column 2: Verb -->
+    <div class="word-column">
+      <button id="button2">Verb</button>
+      <ul class="verb-list">
+        <li class="verb">jumped over</li>
+        <li class="verb">ran toward</li>
+        <li class="verb">laughed at</li>
+        <li class="verb">sneezed on</li>
+        <li class="verb">painted</li>
+      </ul>
     </div>
 
-    <!-- Adjective Column -->
-    <div class="word-column" id="adjective-col">
-      <h2>Adjective</h2>
-      <div class="buttons" id="adjective-buttons"></div>
+    <!-- Column 3: Adjective -->
+    <div class="word-column">
+      <button id="button3">Adjective</button>
+      <ul class="verb-list">
+        <li class="verb">a smelly</li>
+        <li class="verb">a dancing</li>
+        <li class="verb">an angry</li>
+        <li class="verb">a glowing</li>
+        <li class="verb">a tiny</li>
+      </ul>
     </div>
 
-    <!-- Noun Column -->
-    <div class="word-column" id="noun-col">
-      <h2>Noun</h2>
-      <div class="buttons" id="noun-buttons"></div>
+    <!-- Column 4: Noun -->
+    <div class="word-column">
+      <button id="button4">Noun</button>
+      <ul class="verb-list">
+        <li class="verb">pumpkin</li>
+        <li class="verb">spaceship</li>
+        <li class="verb">taco</li>
+        <li class="verb">squirrel</li>
+        <li class="verb">snowman</li>
+      </ul>
     </div>
 
-    <!-- Phrase Column -->
-    <div class="word-column" id="phrase-col">
-      <h2>Phrase</h2>
-      <div class="buttons" id="phrase-buttons"></div>
+    <!-- Column 5: Phrase -->
+    <div class="word-column">
+      <button id="button5">Phrase</button>
+      <ul class="verb-list">
+        <li class="verb">before sunrise</li>
+        <li class="verb">during math class</li>
+        <li class="verb">while breakdancing</li>
+        <li class="verb">on a Tuesday</li>
+        <li class="verb">without pants</li>
+      </ul>
     </div>
   </div>
 
