removed text from buttons

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="storymaker-container">
     <!-- Column 1: Subject -->
     <div class="word-column">
-      <button id="button1">Subject</button>
+      <button id="button1" class="color-btn purple"></button>
       <ul class="verb-list">
         <li class="verb">The cat</li>
         <li class="verb">My brother</li>
@@ -28,7 +28,7 @@
 
     <!-- Column 2: Verb -->
     <div class="word-column">
-      <button id="button2">Verb</button>
+      <button id="button2" class="color-btn blue"></button>
       <ul class="verb-list">
         <li class="verb">jumped over</li>
         <li class="verb">ran toward</li>
@@ -40,7 +40,7 @@
 
     <!-- Column 3: Adjective -->
     <div class="word-column">
-      <button id="button3">Adjective</button>
+      <button id="button3" class="color-btn green"></button>
       <ul class="verb-list">
         <li class="verb">a smelly</li>
         <li class="verb">a dancing</li>
@@ -52,7 +52,7 @@
 
     <!-- Column 4: Noun -->
     <div class="word-column">
-      <button id="button4">Noun</button>
+      <button id="button4" class="color-btn orange"></button>
       <ul class="verb-list">
         <li class="verb">pumpkin</li>
         <li class="verb">spaceship</li>
@@ -64,7 +64,7 @@
 
     <!-- Column 5: Phrase -->
     <div class="word-column">
-      <button id="button5">Phrase</button>
+      <button id="button5" class="color-btn pink"></button>
       <ul class="verb-list">
         <li class="verb">before sunrise</li>
         <li class="verb">during math class</li>
